# UI module CMakeLists.txt
# For all custom Qt widgets and UI-related logic that will be reused across the application

# Placeholder for future UI library
# add_library(PointCloudUI STATIC)
# target_sources(PointCloudUI PRIVATE)
# target_link_libraries(PointCloudUI Qt6::Core Qt6::Widgets Qt6::Svg)
